# Graph_Linking

./: .gitignore  ClusterDataset.py  ClusterDatasetBuilder.py  ClusterDatasetTransformer.py  EdgeConvBlock.py  EventGrouping.py  GNNDataset.py  GNN_TrackLinkingNet.py  LossFunction.py  README.md  Transformer.py  build_dataset.py  create_GNN_dataset.py  data_processing.ipynb  data_statistics.py  graph_utils.py  interpret_mdel.ipynb  lang.py  plot_results.py  requirements.txt  run_gnn_model.ipynb  run_transformer.ipynb  test.py  train_GNN.py  train_transformer.py  training.py
notebooks/: data_processing (conflicted copy 2025-06-24 105547).ipynb  data_processing.ipynb  interpret_model.ipynb  run_gnn_model.ipynb  run_transformer.ipynb
scripts/: compareGNNDatasets.py  createClusterDataset.py  createGNNDataset.py  dataStats.py  edgeStability.py  metricsCreation.py  (+7 more)
tracksterLinker/: pyproject.toml
tracksterLinker/GNN/: TrackLinkingNet.py
tracksterLinker/datasets/: ClusterDatasetBuilder.py
tracksterLinker/tracksterLinker/GNN/: EdgeConvBlock.py  LossFunctions.py  TrackLinkingNet.py  train.py
tracksterLinker/tracksterLinker/datasets/: ClusterDataset.py  GNNDataset.py  NeoGNNDataset.py
tracksterLinker/tracksterLinker/multiGNN/: PUNet.py  train.py
tracksterLinker/tracksterLinker/transformer/: Transformer.py
tracksterLinker/tracksterLinker/utils/: dataStatistics.py  dataUtils.py  graphHeatMap.py  graphUtils.py  plotResults.py
tracksterLinker/tracksterLinker/utils/perturbations/: inErrorBars.py  stabilityMap.py
tracksterLinker/utils/: dataUtils.py  graphUtils.py
(+25 files in other folders)
