[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracksterLinker"
version = "0.1.0"
description = "A package for linking tracksters using a GNN or a Transformers"
authors = [
  { name = "Christine Zeh", email = "me@christinezeh.com" }
]
dependencies = [
  # Add runtime dependencies here, e.g.:
  # "requests>=2.25.1"
]

